--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet" text="text/css">
    </head>
  <body>
-     <h1>Тіп заголовок</h1> 
+     <h1> Main Caption </h1> 
            <div>    
              
                         <div class="block_1"><div class="title">Caption 1</div>
