--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <h1> Main Caption </h1> 
            <div>    
              
-                        <div class="block_1"><div class="title">Caption 1</div>
+                        <div class="block_1"><div class="title"><span> Caption 1 </span></div>
                             <p >Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                                 Architecto perferendis tempora harum porro debitis aperiam. 
                                 Quos exercitationem molestias, odio officiis quam illo blanditiis  
